--- a/wabapi.yml
+++ b/wabapi.yml
@@ -4,13 +4,11 @@ info:
   description: Optional multiline or single-line description in [CommonMark](http://commonmark.org/help/) or HTML.
   version: 0.1.9
 servers:
-  - url: http://api.example.com/v1
-    description: Optional server description, e.g. Main (production) server
-  - url: http://staging-api.example.com
-    description: Optional server description, e.g. Internal staging server for testing
+  - url: https://hooks.act-node.com/service/v1
+    description: ACT cloud webhook APIs
 paths:
-  /users:
-    get:
+  /{group_code}/{key}:
+    post:
       summary: Returns a list of users.
       description: Optional extended description in CommonMark or HTML.
       responses:
