--- a/webapi.yaml
+++ b/webapi.yaml
@@ -1,16 +1,16 @@
 openapi: 3.0.0
 info:
-  title: Sample API
-  description: Optional multiline or single-line description in [CommonMark](http://commonmark.org/help/) or HTML.
-  version: 0.1.9
+  title: ACT.cloud webhook API
+  description: ACT cloud sensor data post API.
+  version: 0.1.0
 servers:
   - url: https://hooks.act-node.com/service/v1
     description: ACT cloud webhook APIs
 paths:
   /{group_code}/{key}:
     post:
-      summary: Returns a list of users.
-      description: Optional extended description in CommonMark or HTML.
+      summary: post sensor data.
+      description: sensor data send to ACT.cloud.
       responses:
         '200':    # status code
           description: A JSON array of user names
