--- a/webapi.yaml
+++ b/webapi.yaml
@@ -11,12 +11,37 @@ paths:
     post:
       summary: post sensor data.
       description: sensor data send to ACT.cloud.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object 
+              required:
+                - value
+              properties:
+                type:
+                  type: string
+                name:
+                  type: string
+                value:
+                  type: number
+                unit:
+                  type: string
+                time:
+                  type: string
+                location:
+                  type: object
+
       responses:
-        '200':    # status code
-          description: A JSON array of user names
+        '200':
+          description: Successfully post sensor data
+        '400':
+          description: Invalid request
           content:
             application/json:
-              schema: 
-                type: array
-                items: 
-                  type: string
+              schema:
+                type: object
+                properties:   
+                  message:
+                    type: string
