--- a/webapi.yaml
+++ b/webapi.yaml
@@ -95,7 +95,7 @@ paths:
 
   /dcmhka/{groupCode}/{key}:
     post:
-      summary: post Docomo Hatake Assist sensor data.
+      summary: post sensor data. (Docomo Hatake Assist)
       description: post Docomo Hatake Assist sensor data send to ACT.cloud.
       parameters:
       - in: path
