--- a/webapi.yaml
+++ b/webapi.yaml
@@ -7,6 +7,7 @@ servers:
   - url: https://hooks.act-node.com/sensor/v1
     description: ACT cloud webhook APIs
 paths:
+  # Standard
   /common/{groupCode}/{Key}:
     post:
       summary: Post sensor data. (standard)
@@ -93,6 +94,7 @@ paths:
         '403':
           description: Forbidden. webhook URL NOT exist or expired
 
+  # Docomo Hatake Assist
   /dcmhka/{groupCode}/{key}:
     post:
       summary: post sensor data. (Docomo Hatake Assist)
