--- a/webapi.yaml
+++ b/webapi.yaml
@@ -57,7 +57,7 @@ paths:
                       type: string
               example:
                 type: env
-                name: temp
+                name: air_temperature
                 value: 23.4
                 unit: ℃
                 time: 2021-01-10T09:12:34.56789Z
