--- a/webapi.yaml
+++ b/webapi.yaml
@@ -196,6 +196,8 @@ paths:
                             type: string
                           lng:
                             type: string
+                          name:
+                            type: string
               example:
                 type: env
                 name: "温湿度"
@@ -233,12 +235,6 @@ paths:
                     type: string
                   name:
                     type: string
-                  data-name:
-                    type: string
-                  value:
-                    type: number
-                  unit:
-                    type: string
                   time: 
                     type: string
                     format: date-time
@@ -251,6 +247,39 @@ paths:
                         type: string
                       name:
                         type: string
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        index:
+                          type: string
+                        type:
+                          type: string
+                        name:
+                          type: string
+                        data-name:
+                          type: string
+                        value:
+                          type: number
+                        unit:
+                          type: string
+                        time:
+                          type: string
+                          format: date-time
+                        location:
+                          type: object
+                          required:
+                            - lat
+                            - lng
+                          properties:
+                            lat:
+                              type: string
+                            lng:
+                              type: string
+                            name:
+                              type: string
+
               example: {
                 statusCode: 200,
                 headers: {
@@ -412,48 +441,56 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    type:
-                      type: string
-                    name:
-                      type: string
-                    data-name:
-                      type: string
-                    value:
-                      type: number
-                    unit:
-                      type: string
-                    time: 
-                      type: string
-                      format: date-time
-                    location:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
                       type: object
                       properties:
-                        lat:
+                        type:
                           type: string
-                        lng:
+                        name:
                           type: string
-              example: [
-                {
-                  type: env,
-                  name: ph,
-                  value: 9.71,
-                  unit: ,
-                  time: 2021-01-10T09:12:34.56789Z,
-                  location: {lat: 35.391133800000006, lng: 139.55841339999998}
-                },
-                {
-                  type: env,
-                  name: water_do,
-                  value: 13.89,
-                  unit: mg/L,
-                  time: 2021-01-10T09:12:34.56789Z,
-                  location: {lat: 35.391133800000006, lng: 139.55841339999998}
-                }
-              ]
+                        data-name:
+                          type: string
+                        value:
+                          type: number
+                        unit:
+                          type: string
+                        time: 
+                          type: string
+                          format: date-time
+                        location:
+                          type: object
+                          properties:
+                            lat:
+                              type: string
+                            lng:
+                              type: string
+                            name:
+                              type: string
+              example:
+                data: [
+                  {
+                    type: env,
+                    name: ph,
+                    data_name: ph,
+                    value: 9.71,
+                    unit: ,
+                    time: 2021-01-10T09:12:34.56789Z,
+                    location: {lat: 35.391133800000006, lng: 139.55841339999998}
+                  },
+                  {
+                    type: env,
+                    name: water_do,
+                    data_name: water_do,
+                    value: 13.89,
+                    unit: mg/L,
+                    time: 2021-01-10T09:12:34.56789Z,
+                    location: {lat: 35.391133800000006, lng: 139.55841339999998}
+                  }
+                ]
         '400':
           description: Bad Request. Incorect request.
         '403':
