--- a/webapi.yaml
+++ b/webapi.yaml
@@ -199,202 +199,15 @@ paths:
         '400':
           description: Bad Request. Incorect request.
         '403':
-          description: Forbidden. webhook URL NOT exist or expired
-
-  # Standard Multi Data ############################################################################
-  /common_multi/{groupCode}/{Key}:
-    post:
-      summary: Post multi sensor data. (Standard)
-      description: Multi sensor data send to ACT.cloud.
-      parameters:
-      - in: path
-        name: "groupCode"
-        required: true
-        schema:
-          type: string
-          description: Group Code
-      - in: path
-        name: Key
-        required: true
-        schema:
-          type: string
-          description: Whebhook Key
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - data
-              properties:
-                type:
-                  type: string
-                name:
-                  type: string
-                time:
-                  type: string
-                  format: date-time
-                location:
-                  type: object
-                  properties:
-                    lat:
-                      type: string
-                    lng:
-                      type: string
-                    name:
-                      type: string
-                data:
-                  type: array
-                  items:
-                    type: object
-                    required:
-                      - value
-                    properties:
-                      index:
-                        type: string
-                      type:
-                        type: string
-                      name:
-                        type: string
-                      data-name:
-                        type: string
-                      value:
-                        type: number
-                      unit:
-                        type: string
-                      time:
-                        type: string
-                        format: date-time
-                      location:
-                        type: object
-                        required:
-                          - lat
-                          - lng
-                        properties:
-                          lat:
-                            type: string
-                          lng:
-                            type: string
-                          name:
-                            type: string
-              example:
-                type: env
-                name: "温湿度"
-                time: "2021-05-10T09:12:34.56789Z"
-                location: {
-                  lng: 139.56031134283484,
-                  lat: 35.39041839643905
-                }
-                data: [
-                  {
-                    type: "env",
-                    value: 23.4,
-                    name: "温度",
-                    data_name: "temperature",
-                    unit: "°C",
-                  },
-                  {
-                    type: "env",
-                    value: 50,
-                    name: "湿度",
-                    data_name: "relative_humidity",
-                    unit: "%"
-                  }
-                ]
-
-      responses:
-        '200':
-          description: Successfully post sensor data
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:   
-                  type:
-                    type: string
-                  name:
-                    type: string
-                  time: 
-                    type: string
-                    format: date-time
-                  location:
-                    type: object
-                    properties:
-                      lat:
-                        type: string
-                      lng:
-                        type: string
-                      name:
-                        type: string
-                  data:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        index:
-                          type: string
-                        type:
-                          type: string
-                        name:
-                          type: string
-                        data-name:
-                          type: string
-                        value:
-                          type: number
-                        unit:
-                          type: string
-                        time:
-                          type: string
-                          format: date-time
-                        location:
-                          type: object
-                          required:
-                            - lat
-                            - lng
-                          properties:
-                            lat:
-                              type: string
-                            lng:
-                              type: string
-                            name:
-                              type: string
-
-              example: {
-                statusCode: 200,
-                headers: {
-                  Content-Type: "application/json"
-                },
-                body: {
-                  time: "2021-05-26T11:35:23.045Z",
-                  location: {
-                    lng: 139.56031134283484,
-                    lat: 35.39041839643905
-                  },
-                  data: [
-                    {
-                      index: "0",
-                      type: "env",
-                      value: 23.4,
-                      name: "温度",
-                      data_name: "temperature",
-                      unit: "°C",
-                    },
-                    {
-                      index: "1",
-                      type: "env",
-                      value: 50,
-                      name: "湿度",
-                      data_name: "temperature",
-                      unit: "%",
-                    }
-                  ]
-                }
-              }
-        '400':
-          description: Bad Request. Incorect request.
-        '403':
-          description: Forbidden. webhook URL NOT exist or expired
+          description: Forbidden. webhook URL NOT exist or expired.
+        '406':
+          description: Not Acceptable. Request source IP address changed before.
+        '412':
+          description: Number of Sensor data exceed connection limit.
+        '500':
+          description: Internal Server Error.
+        '503':
+          description: Service Unavailable. The connection is suspended or disabled.
 
   # TEST Sensor Data Get ########################################################################
   /data_check/{groupCode}/{Key}:
