--- a/webapi.yaml
+++ b/webapi.yaml
@@ -10,8 +10,8 @@ paths:
   # Standard #####################################################################################
   /common/{groupCode}/{Key}:
     post:
-      summary: Post single sensor data. (Standard)
-      description: Single sensor data send to ACT.cloud.
+      summary: Post common sensor data. (Standard)
+      description: Common sensor data send to ACT.cloud.
       parameters:
       - in: path
         name: "groupCode"
@@ -209,11 +209,11 @@ paths:
         '503':
           description: Service Unavailable. The connection is suspended or disabled.
 
-  # TEST Sensor Data Get ########################################################################
-  /data_check/{groupCode}/{Key}:
-    get:
-      summary: Test API for Get sensor data in 24hr
-      description: sensor data get
+  # Standard #####################################################################################
+  /sigfox/{groupCode}/{Key}:
+    post:
+      summary: Post Sigfox sensor data.
+      description: Sigfox sensor data send to ACT.cloud.
       parameters:
       - in: path
         name: "groupCode"
@@ -227,42 +227,144 @@ paths:
         schema:
           type: string
           description: Whebhook Key
- 
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object 
+              properties:
+                time:
+                  type: number
+                deviceTypeId:
+                  type: string
+                device:
+                  type: string
+                snr:
+                  type: string
+                rssi:
+                  type: string
+                station:
+                  type: string
+                data:
+                  type: string
+                seqNumber:
+                  type: string
+              example:
+              - time: 1626534351,
+                deviceTypeId: "60bf61444175811d757ab461"
+                device: "EFB9A3"
+                snr: "11.00"
+                rssi: "-133.00"
+                station: "ADAC"
+                data: "7d44533d7e003d00"
+                seqNumber: "1029"
       responses:
         '200':
-          description: Successfully get sensor data for test
+          description: Successfully post sensor data
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:   
-                    gid:
-                      type: string
-                    device_id:
-                      type: string
-                    measure_name:
-                      type: string
-                    measure_value:
-                      type: number
-                    time: 
-                      type: string
-                      format: date-time
-              example:
-                [
-                  {
-                    gid: "369eddb5-d09c-48e4-8bc2-84a36e84eb8d",
-                    device_id: "470ffec6-e10d-59f5-9cd3-95b47f95fc9e",
-                    measure_value: 30.5,
-                    measure_name: "temperature",
-                    time: "2021-05-26 12:32:40.244000000"
-                  }
-                ]
+                type: object
+                properties:   
+                  type:
+                    type: string
+                  name:
+                    type: string
+                  data-name:
+                    type: string
+                  value:
+                    type: number
+                  unit:
+                    type: string
+                  time: 
+                    type: string
+                    format: date-time
+                  location:
+                    type: object
+                    properties:
+                      lat:
+                        type: string
+                      lng:
+                        type: string
+                      name:
+                        type: string
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        index:
+                          type: string
+                        type:
+                          type: string
+                        name:
+                          type: string
+                        data-name:
+                          type: string
+                        value:
+                          type: number
+                        unit:
+                          type: string
+                        time:
+                          type: string
+                          format: date-time
+                        location:
+                          type: object
+                          required:
+                            - lat
+                            - lng
+                          properties:
+                            lat:
+                              type: string
+                            lng:
+                              type: string
+                            name:
+                              type: string
+              example: {
+                statusCode: 200,
+                headers: {
+                  Content-Type: "application/json"
+                },
+                body: {
+                  type: "env",
+                  time: "2021-05-26T11:35:23.045Z",
+                  location: {
+                    lng: 139.56031134283484,
+                    lat: 35.39041839643905
+                  },
+                  data: [
+                    {
+                      index: "0",
+                      type: "env",
+                      value: 23.4,
+                      name: "温度",
+                      data_name: "temperature",
+                      unit: "°C",
+                    },
+                    {
+                      index: "1",
+                      type: "env",
+                      value: 50,
+                      name: "湿度",
+                      data_name: "temperature",
+                      unit: "%",
+                    }
+                  ]
+                }
+              }
         '400':
           description: Bad Request. Incorect request.
         '403':
-          description: Forbidden. webhook URL NOT exist or expired
+          description: Forbidden. webhook URL NOT exist or expired.
+        '406':
+          description: Not Acceptable. Request source IP address changed before.
+        '412':
+          description: Number of Sensor data exceed connection limit.
+        '500':
+          description: Internal Server Error.
+        '503':
+          description: Service Unavailable. The connection is suspended or disabled.
 
   # ZETA Techsor Sensor API ################################################################
   /techsor/{groupCode}/{key}:
@@ -391,6 +493,61 @@ paths:
                     unit: mg/L,
                     time: 2021-01-10T09:12:34.56789Z,
                     location: {lat: 35.391133800000006, lng: 139.55841339999998}
+                  }
+                ]
+        '400':
+          description: Bad Request. Incorect request.
+        '403':
+          description: Forbidden. webhook URL NOT exist or expired
+
+  # TEST Sensor Data Get ########################################################################
+  /data_check/{groupCode}/{Key}:
+    get:
+      summary: Test API for Get sensor data in 24hr
+      description: sensor data get
+      parameters:
+      - in: path
+        name: "groupCode"
+        required: true
+        schema:
+          type: string
+          description: Group Code
+      - in: path
+        name: Key
+        required: true
+        schema:
+          type: string
+          description: Whebhook Key
+ 
+      responses:
+        '200':
+          description: Successfully get sensor data for test
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:   
+                    gid:
+                      type: string
+                    device_id:
+                      type: string
+                    measure_name:
+                      type: string
+                    measure_value:
+                      type: number
+                    time: 
+                      type: string
+                      format: date-time
+              example:
+                [
+                  {
+                    gid: "369eddb5-d09c-48e4-8bc2-84a36e84eb8d",
+                    device_id: "470ffec6-e10d-59f5-9cd3-95b47f95fc9e",
+                    measure_value: 30.5,
+                    measure_name: "temperature",
+                    time: "2021-05-26 12:32:40.244000000"
                   }
                 ]
         '400':
